# RocketPi-5

./: .gitignore
Core/: 01-constraints.md  02-current-state.md  03-decisions-log.md  07-test-plan.md  08-lab-notebook.md  09-bibliography.md
avionics/: Makefile
avionics/inc/: avionics_types.h  fault.h  isr_flags.h
avionics/inc/algorithm/: control_law.h  estimator.h  fdir.h
avionics/inc/hardware/: bmi160.h  icm42688p.h  ms5611.h  platform.h  sik_radio.h
avionics/inc/orchestration/: mode_fsm.h
avionics/inc/output/: actuators.h  c2.h  telemetry.h
avionics/src/algorithm/: control_law.c  estimator.c  fdir.c
avionics/src/hardware/: bmi160.c  icm42688p.c  ms5611.c  platform.c  sik_radio.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
avionics/test/: check.h  estimator_cov.c  fdir_cov.c  test_control_law.c  test_estimator.c  test_fdir.c  test_main.c  test_support.c
docs/: 01-constraints.md  02-current-state.md  03-decisions-log.md  04-requirements.md  05-architecture.md  06-risk-register.md  07-test-plan.md  08-lab-notebook.md  09-bibliography.md
docs/cad/: aft-most-section.md  airframe-architecture.md
docs/derivations/: LR-1-loop-rate.md
docs/gcs/: design-brief.md  functional-spec.md
gcs/: pyproject.toml
gcs/rocketgcs/: __init__.py
gcs/rocketgcs/c2/: __init__.py
gcs/rocketgcs/dashboard/: __init__.py
gcs/rocketgcs/logger/: __init__.py
gcs/rocketgcs/protocol/: __init__.py
gcs/rocketgcs/state/: __init__.py
gcs/rocketgcs/tools/: __init__.py
gcs/rocketgcs/transport/: __init__.py
hardware/cad/: aft-most.step
tools/: step_audit.py
(+6 files in other folders)
